cluster/microservices/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-backend
  namespace: microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: backend
      app: dice
  template:
    metadata:
      labels:
        tier: backend
        app: dice
    spec:
      containers:
      - name: backend
        image: hasnainzaib/abc
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: microservice
spec:
  selector:
    tier: backend
    app: dice
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
