cluster/microservices/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-frontend
  namespace: microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: frontend
      app: dice
  template:
    metadata:
      labels:
        tier: frontend
        app: dice
    spec:
      containers:
      - name: frontend
        image: hasnainzaib/why
        resources:
          requests:
            memory: "64Mi"
            cpu: "500m"
          limits:
            memory: "128Mi"
            cpu: "1000m"
        livenessProbe:
          httpGet:
            path: /hello
            port: 8080
          initialDelaySeconds: 3
          failureThreshold: 2
          periodSeconds: 3
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /hello
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 1      
        ports:
        - containerPort: 8080
          name: tcp

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: microservice
spec:
  selector:
    tier: frontend
    app: dice
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
