cluster/microservices/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cv
  namespace: microservice
  annotations: 
    cert-manager.io/cluster-issuer: production-cluster-issuer 
spec:
  ingressClassName: nginx
  rules:
  - host: microservice.mhasnain.dev
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend
            port:
              number: 8080
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - microservice.mhasnain.dev
    secretName: micro-cert
